# fieldnotes

./: .gitignore  CHANGELOG.md  CHANGELOG_v0.2.0.md  Fieldnote.spec  Fieldnotes.spec  Makefile  PROJECT_STRUCTURE.md  README.md  RELEASE_NOTES_v0.3.0.md  ai_backend.py  ai_prompts.py  ai_widgets.py  database.py  exporter.py  generate_copyright_docs.py  gui.py  logger.py  main.py  pyproject.toml  qt_conf_fix.py  requirements.txt  theme.py
.github/workflows/: build-release.yml  test-build.yml
copyright/: 代码统计.txt  源代码.docx  源代码.md  源代码文档.docx  申请表信息.docx  申请表信息.md  软件说明书.docx  软件说明书.md
docs/: DOCS_INDEX.md  FEATURE_ROADMAP.md  README.md  TROUBLESHOOTING.md
docs/developer/: CHANGELOG.md  CROSS_PLATFORM_BUILD.md  GITHUB_RELEASE_GUIDE.md
docs/plans/: 2026-03-07-refactoring-design.md  2026-03-07-refactoring-plan.md
hooks/: rthook_qt_permissions.py
samples/: sample_data_all_types.csv  sample_data_all_types.json
scripts/: build_executable.bat  build_executable.sh  build_executable_fixed.sh  debug_crash.sh  prepare_release.sh
tests/: conftest.py  test_ai_backend.py  test_ai_prompts.py  test_database.py  test_exporter.py  test_logger.py  test_theme.py
tests/test_gui/: conftest.py  test_widgets.py
ui/: __init__.py  ai_coordinator.py  data_operations.py  dialogs.py  entry_tab_widget.py  export_manager.py  main_window.py  search_manager.py  tab_manager.py  widgets.py
